// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The breakout fragment builds as expected when it includes all attributes The parsed breakout fragment matches the snapshot on file 1`] = `
Object {
  "childUris": Array [],
  "contentType": "Breakout",
  "contents": "",
  "data": Object {
    "color": "#7694e4",
    "icon": "http://localhost:8080/topic-assets/mock-topic-uri/images/cat.svg",
    "iconSize": "large",
    "title": "Advice from a cat",
  },
  "dependencyUris": Array [],
  "digest": "4f9cced00fc5f6cbf94e3bf1eaab3280",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": false,
  "isStateful": false,
  "uri": "test-fragment-uri",
}
`;

exports[`The breakout fragment builds as expected when it includes an icon The parsed breakout fragment matches the snapshot on file 1`] = `
Object {
  "childUris": Array [],
  "contentType": "Breakout",
  "contents": "",
  "data": Object {
    "color": undefined,
    "icon": "https://api.iconify.design/mdi/lightbulb-on-10.svg",
    "iconSize": "small",
    "title": "Tip",
  },
  "dependencyUris": Array [],
  "digest": "20f22bbd088045d7076380b375a1f359",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": false,
  "isStateful": false,
  "uri": "test-fragment-uri",
}
`;

exports[`The simple breakout fragment builds as expected The parsed simple breakout fragment matches the snapshot on file 1`] = `
Object {
  "childUris": Array [],
  "contentType": "Breakout",
  "contents": "",
  "data": Object {
    "color": undefined,
    "iconSize": "small",
    "title": "Tip",
  },
  "dependencyUris": Array [],
  "digest": "ef716ba07b3d50254a48a500079c08ec",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": false,
  "isStateful": false,
  "uri": "test-fragment-uri",
}
`;
